novas paginas e modificaçoes, nova style

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <picture>
                  <source media="(max-width: 800px)" srcset="imagem/YT-Full-p.jpg">
                 <source media="(max-width: 1050px)" srcset="imagem/YT-Full-m.jpg">
-                <img src="imagem/YT-Full-g.jpg" alt="Banner do canal">
+                <a href="ytimage.html" target="_self" rel="internal"><img src="imagem/YT-Full-g.jpg" alt="Banner do canal"></a>
             </picture>
 
-            <img src="imagem/PUBG.jpg" alt="">
+            <a href="pubg.html" target="_self" rel="internal"><img src="imagem/PUBG.jpg" alt="PUBG"></a>
             
 
             <div>
