--- a/perfil.html
+++ b/perfil.html
@@ -18,7 +18,7 @@
     </div>
 
     <nav>
-        <a href="meusite.html" target="_self" rel="prev">Voltar</a>
+        <a href="index.html" target="_self" rel="prev">Voltar</a>
     </nav>
 
     <main>
