modificação no background do body

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="estilo/predefiniçoes.css">
     <link rel="stylesheet" href="estilo/principal.css">
     <style>
-
+        body {
+            height: 100vh;
+            background-image: url('imagem/Clash\ of\ Clans\ 4k.jpg');
+            background-repeat: no-repeat;
+            background: url('imagem/Clash\ of\ Clans\ 4k.jpg') center center fixed;
+            background-size: cover;
+        }
     </style>
 </head>
 <body>
@@ -35,7 +41,7 @@
     <main>
         <article>
             <h1>História do canal</h1>
-            <p>Há muito tempo atrás, há muitos anos na verdade (não recordo qual ano), eu pensei em criar um canal no YouTube sobre jogos já que naquele tempo a tendência de canais sobre jogos eram muito grandes, e então acabei criando meu primeiro canal que se chamava: Paulo Anderson, sim, esse era o nome, já que criatividade não existia para mim naquele tempo (emoji), e então eu criei o canal e fui fazendo vídeos sobre jogos de celulares e alguns tutoriais, e não riem, meu gravador de tela era outro celular já que eu não sabia como baixava gravadores de telas, e também porque era bem limitado naquele tempo, então dêem um desconto (emoji).</p> <p>Passando vários meses de canal, eu acabei saindo um pouco desse meio... se passou vários meses e eu voltei, só que com outro nome:"Games e Tutoriais", (que era basicamente um canal de games e tutoriais). Com uma pequena evolucao  que eu tive no antigo canal,que era de 30 inscritos. eu criei um canal novo, que chegou aos 130 inscritos, e um vídeo de tutorial sobre uTorrent que bateu numa incrível marca de 5mil visualizações, e ainda ganhei 1 Real do YouTube (emoji). Anos se passaram e eu acabei ficando sem motivação e criatividade, e dessa vez parei por muito anos, até que em 2023 (nesse ano que estou digitando isso) voltei com um novo canal com o nome: "Anso" só que dessa vez não comecei com tudo, comecei mais devagar.</p>
+            <p>Há muito tempo atrás, há muitos anos na verdade (não recordo qual ano), eu pensei em criar um canal no YouTube sobre jogos já que naquele tempo a tendência de canais sobre jogos eram muito grandes, e então acabei criando meu primeiro canal que se chamava: Paulo Anderson, sim, esse era o nome, já que criatividade não existia para mim naquele tempo &#x1F62C;, e então eu criei o canal e fui fazendo vídeos sobre jogos de celulares e alguns tutoriais, e não riem, meu gravador de tela era outro celular já que eu não sabia como baixava gravadores de telas, e também porque era bem limitado naquele tempo, então dêem um desconto &#x1F61C;.</p> <p>Passando vários meses de canal, eu acabei saindo um pouco desse meio... se passou vários meses e eu voltei, só que com outro nome:"Games e Tutoriais", (que era basicamente um canal de games e tutoriais). Com uma pequena evolucao  que eu tive no antigo canal,que era de 30 inscritos. eu criei um canal novo, que chegou aos 130 inscritos, e um vídeo de tutorial sobre uTorrent que bateu numa incrível marca de 5mil visualizações, e ainda ganhei 1 Real do YouTube &#x1F602;. Anos se passaram e eu acabei ficando sem motivação e criatividade, e dessa vez parei por muito anos, até que em 2023 (nesse ano que estou digitando isso) voltei com um novo canal com o nome: "Anso" só que dessa vez não comecei com tudo, comecei mais devagar.</p>
 
             
             <picture>
