color do bg body

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <style>
         body {
             height: 100vh;
-            background-image: url('imagem/Clash\ of\ Clans\ 4k.jpg');
-            background-repeat: no-repeat;
-            background: url('imagem/Clash\ of\ Clans\ 4k.jpg') center center fixed;
+            background: rgb(115, 115, 115) url('imagem/Clash\ of\ Clans\ 4k.jpg') center center fixed;
             background-size: cover;
         }
     </style>
