--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             background: rgb(115, 115, 115) url('imagem/Clash\ of\ Clans\ 4k.jpg') center center fixed;
             background-size: cover;
         }
+
+        div#resumo {
+            border: none;
+        }
+
+        
     </style>
 </head>
 <body>
@@ -51,7 +57,7 @@
             <a href="pubg.html" target="_self" rel="internal"><img src="imagem/PUBG.jpg" alt="PUBG"></a>
             
 
-            <div>
+            <div id="resumo">
                 <h2>Resumo</h2>
                 <p>Sempre desisti daquilo que eu mais me sentia feliz e que eu achava que me divertia, mas sempre voltando</p>
             </div>
@@ -75,7 +81,7 @@
     </main>
 
     <footer>
-
+        <p>Site criado por <a href="#">Anderson Lima</a>.</p>
     </footer>
 
 </body>
