--- a/ytimage.html
+++ b/ytimage.html
@@ -8,6 +8,11 @@
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/imagens.css">
     <link rel="stylesheet" href="estilo/predefiniçoes.css">
+    <style>
+        a {
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <img src="imagem/YT-Full-g.jpg" alt="Banner do canal">
