--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim dolorum cupiditate voluptatibus? Nesciunt ad quibusdam ducimus molestiae quasi! Exercitationem velit necessitatibus alias, fugiat nostrum quidem porro! Quidem debitis sint officiis? &#x1F62C;, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa sunt, pariatur dolor quisquam cumque dolorem placeat at quos blanditiis molestias. In facere illum qui aliquam nostrum beatae quibusdam praesentium ipsam. &#x1F61C;.</p> <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae totam voluptates ipsum exercitationem ipsa distinctio dignissimos sapiente recusandae! Ipsam, minima assumenda! Odio laborum cum fugiat reiciendis quibusdam atque, ullam voluptatum? &#x1F602;. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem magnam eveniet, consequatur iste maiores quidem aperiam possimus delectus ad enim reprehenderit deserunt nemo ratione nihil dolor officiis. Consequuntur, reprehenderit totam.</p>
 
             
-            <picture class="foto">
+            <div class="foto">
                  <source media="(max-width: 800px)" srcset="imagem/YT-Full-p.jpg">
                 <source media="(max-width: 1050px)" srcset="imagem/YT-Full-m.jpg">
                 <a href="ytimage.html" target="_self" rel="internal"><img src="imagem/YT-Full-g.jpg" alt="Banner do canal"></a>
-            </picture>
+            </div>
 
-            <picture class="foto">
+            <div class="foto">
                 <a href="pubg.html" target="_self" rel="internal"><img src="imagem/PUBG.jpg" alt="PUBG"></a>
-            </picture>
+            </div>
             
 
             <div id="resumo">
